[check-manifest]
ignore =
    *.cfg
    .readthedocs.yml
    bootstrap.py
    requirements_docs.txt

[zest.releaser]
python-file-with-version = src/icalendar/__init__.py
create-wheel = yes

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.rst

[tool:pytest]
norecursedirs = .* env* docs *.egg src/icalendar/tests/hypothesis
